--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <h1>Pre-paid Parking Form</h1>
-      <form id="parking-form">
+      <form id="parking-form" novalidate>
         <div class="input-field" id="name-field">
           <label for="name">Name</label>
           <input id="name" type="text" required>
@@ -52,6 +52,6 @@
         </div>
       </form>
       <div id="total"></div>
-      <script src="script.js"></script>
+      <script src="script.js" defer></script>
   </body>
 </html>
