--- a/form.html
+++ b/form.html
@@ -8,42 +8,48 @@
   <body>
     <div class="container">
       <h1>Pre-paid Parking Form</h1>
-      <form id="parking-form" novalidate>
+      <form id="parking-form">
         <div class="input-field" id="name-field">
           <label for="name">Name</label>
-          <input id="name" type="text" required>
+          <input id="name" type="text">
         </div>
         <div class="input-field" id="car-field">
           <label for="car-year">Car</label>
           <div class="input-group">
-            <input id="car-year" type="number" min="1990" max="2022" placeholder="Year" required>
-            <input id="car-make" type="text" placeholder="Make" required>
-            <input id="car-model" type="text" placeholder="Model" required>
+            <div id="car-year-div">            
+              <input id="car-year" type="number" placeholder="Year">
+            </div>
+            <div id="car-make-div">
+              <input id="car-make" type="text" placeholder="Make">
+            </div>
+            <div id="car-model-div">  
+              <input id="car-model" type="text" placeholder="Model">
+            </div>
           </div>
         </div>
         <div class="input-field" id="start-date-field">
           <label for="start-date">Date parking</label>
-          <input id="start-date" type="date" required>
+          <input id="start-date" type="date">
         </div>
         <div class="input-field" id="days-field">
           <label for="days">Number of days</label>
-          <input id="days" type="number" min="1" max="30" required>
+          <input id="days" type="number">
         </div>
         <div class="input-field" id="credit-card-field">
           <label for="credit-card">Credit Card</label>
-          <input id="credit-card" type="text" required>
+          <input id="credit-card" type="text">
         </div>
         <div class="row">
           <div class="col">
             <div class="input-field" id="cvv-field">
               <label for="cvv">CVV</label>
-              <input id="cvv" type="text" required>
+              <input id="cvv" type="number">
             </div>
           </div>
           <div class="col">
             <div class="input-field" id="expiration-field">
               <label for="expiration">Expiration</label>
-              <input id="expiration" type="text" placeholder="MM/YY" required>
+              <input id="expiration" type="text" placeholder="MM/YY">
             </div>
           </div>
         </div>
