added credit card and working on parking total cost

--- a/form.html
+++ b/form.html
@@ -54,7 +54,9 @@
           </div>
         </div>
         <div class="input-field">
-          <button id="submit-button" type="submit">Make reservation</button>
+          <div id="show-total">
+            <button id="submit-button" type="submit">Make reservation</button>
+          </div>
         </div>
       </form>
       <div id="total"></div>
